--- a/website/index.html
+++ b/website/index.html
@@ -32,7 +32,7 @@
         <article>
           <figure><img src="images/demo/450x250.png" width="450" height="250" alt="">
             <figcaption>
-              <h2>% of digits that are classfied as HARD when T=0.5</h2>
+              <h2>Percentage of digits that are classfied as HARD when T=0.5</h2>
             </figcaption>
           </figure>
         </article>
@@ -41,13 +41,18 @@
         <article>
           <figure><img src="images/demo/450x250_l.png" width="450" height="250" alt="">
             <figcaption>
-              <h2>% of digits that are classfied as HARD when T=0.8</h2>
+              <h2>Percentage of digits that are classfied as HARD when T=0.8</h2>
             </figcaption>
           </figure>
         </article>
       </section>
       <!-- / Introduction -->
     </div>
+    <h2 style="padding: 50px;">
+    For this project we decided to train a two layer convolutional neural network to detect which images where going to be hard to calssify by the original set of algorithms. We originally were going to train a binary tree classifier using the ID3 algorithm but we saw that the algorithm had terrible accuracy on the test data. From already existing data we say that the MNIST problem was solved efficiently with a neural network. 
+  </h2>
+
+
     <!-- / content body -->
   </div>
 </div>
